--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
   <body>
     <main>
       <h1>Guessing Game</h1>
-      <p>
-        I'm thinking of a number from 1 to 99! Can you guess it in 5 tries or
-        less?
-      </p>
+      <p>I'm thinking of a number from 1 to 99! Can you guess it in 5 tries or
+        less?</p>
       <div>
+        <!-- this gets the users response -->
         <input type="number" id="guess" min="1" max="99" />
         <button id="submit">Submit Guess</button>
       </div>
       <div>
+        <!-- these will be displayed based on the results -->
         <p class="message" id="number-of-guesses"></p>
         <p class="message" id="too-high">You guessed too high. Try again.</p>
         <p class="message" id="too-low">You guessed too low. Try again.</p>
-        <p class="message" id="max-guesses">
-          You reached the max number of guesses
-        </p>
+        <p class="message" id="max-guesses">You reached the max number of guesses</p>
+         <!--this will be displayed if they guessed the rite number -->
         <p class="message" id="correct">
-          Congratulations, You guessed correctly! <br />
+          Congratulations, You guessed correctly! <br>
           Would you like to play again?
         </p>
+        <!-- this is for the invalid input message -->
+        <p id="invalid-input" class="message" style="display: none;"></p>
       </div>
+      <!-- this button restarts the game -->
       <button id="reset">Reset</button>
     </main>
     <script src="index.js"></script>
